Closed Bug 642247 Opened 15 years ago Closed 15 years ago

TI: function timeout(): [infer failure] Missing type at #2:00003 pushed 0: int

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: jandem)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)

Attachments

(1 file, 1 obsolete file)

The shell function timeout() causes a crash in a shell running with options -n -a.
Attached patch Patch (obsolete) — Splinter Review
timeout(x) returns undefined but timeout() returns an integer.
Assignee: general → jandemooij
Status: NEW → ASSIGNED
Attachment #519770 - Flags: review?(bhackett1024)
Attachment #519770 - Flags: review?(bhackett1024) → review+
Attached patch PatchSplinter Review
Oops attached the wrong file.
Attachment #519770 - Attachment is obsolete: true
Attachment #519772 - Flags: review?(bhackett1024)
Attachment #519772 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
A testcase for this bug was automatically identified at js/src/tests/js1_8_5/regress/regress-642247.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: