[INFER] Fix type handler for timeout function, bug 642247. r=bhackett